[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/font_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://grid/Grid.gd" type="Script" id=2]
[ext_resource path="res://assets/theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.156863, 0.121569, 0.109804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.156863, 0.121569, 0.109804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Grid" type="Node2D"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1019.0
margin_bottom = 594.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 594.0
custom_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 60.0
margin_top = 12.0
margin_right = 994.0
margin_bottom = 582.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TopMargin" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 934.0
margin_bottom = 80.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/margin_top = 80

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 934.0
margin_bottom = 518.0
custom_constants/separation = 30

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 430.0
margin_bottom = 430.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_styles/panel = SubResource( 2 )

[node name="Grid" type="GridContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 415.0
margin_bottom = 415.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 6
size_flags_vertical = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="Toolbar" type="PanelContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 460.0
margin_right = 934.0
margin_bottom = 434.0
rect_min_size = Vector2( 474, 434 )
theme = SubResource( 1 )
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar"]
margin_left = 15.0
margin_top = 15.0
margin_right = 459.0
margin_bottom = 419.0
custom_constants/separation = 25

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer"]
margin_left = 336.0
margin_right = 444.0
margin_bottom = 30.0
size_flags_horizontal = 10
size_flags_vertical = 8
text = "Quit"

[node name="BotMargin" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 522.0
margin_right = 934.0
margin_bottom = 570.0
custom_constants/margin_top = 48

[node name="TopBar" type="HBoxContainer" parent="."]
margin_left = 509.0
margin_top = 297.0
margin_right = 509.0
margin_bottom = 297.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterOverlay" type="MarginContainer" parent="."]
margin_left = 509.0
margin_top = 297.0
margin_right = 509.0
margin_bottom = 297.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
